# comics

./: .dockerignore  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  AUTHORS.update  Dockerfile  Makefile  README  README.md  README.rst  codecov.yml  contributing.html  dev-template.env  docker-compose.yml  docker-entrypoint.sh  genindex.html  index.html  installation.html  manage.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-flake8.txt  requirements-tests.txt  requirements.txt  search.html  searchindex.js  setup.cfg  tasks.py  todo.html  tox.ini  update-authors.sh  upgrade.sql  usage.html  zensical.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
apache/: dev.wsgi  prod.wsgi
comics/: __init__.py  manage.py  settings.py  settings_coverage.py  settings_dev.py  settings_local.py.template  settings_testing.py  urls.py  wsgi.py
comics/accounts/: admin.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
comics/accounts/migrations/: 0001_initial.py  0002_add_user_profile_comics_field.py  0002_id_as_bigautofield.py
comics/accounts/tests/: test_login.py
comics/aggregator/: command.py  crawler.py  downloader.py  exceptions.py  feedparser.py  lxmlparser.py  utils.py
comics/aggregator/tests/: __init__.py  command.py  crawler.py  test_command.py  test_crawler.py
comics/api/: authentication.py  authorization.py  resources.py  tests.py  urls.py
comics/api/fixtures/: comics.json
comics/api/tests/: __init__.py  test_comics.py  test_images.py  test_releases.py  test_root.py  test_subscriptions.py  test_users.py
comics/browser/: feeds.py  urls.py  views.py
comics/comics/: 20px.py  8bittheater.py  __init__.py  abstrusegoose.py  adam4d.py  alicegrove.py  amazingsuperpowers.py  anleggsplassen.py  antics.py  apokalips.py  applegeeks.py  applegeekslite.py  asofterworld.py  atheistcartoons.py  awkwardzombie.py  axecop.py  babyblues.py  basicinstructions.py  beetlebailey.py  bestis.py  betty.py  beyondthetree.py  bgobt.py  billy.py  bizarro.py  bizarroen.py  bizarrono.py  blasternation.py  bloomcounty2015.py  boasas.py  boxerhockey.py  brandondraws.py  brinkerhoff.py  bugcomic.py  bunny.py  businesscat.py  butternutsquash.py  buttersafe.py  calamitiesofnature.py  calvinandhobbes.py  (+242 more)
comics/common/: admin.py  context_processors.py  feeds.py  models.py  urls.py  views.py
comics/common/fixtures/: initial_data.json  test_comics.json  test_strips.json
comics/common/templates/: base.html
comics/common/tests/: __init__.py  comic_releases.py  comic_strips.py  time_frames.py
comics/common/utils/: comic_releases.py  comic_strips.py  navigation.py  time_frames.py
comics/core/: admin.py  comic_data.py  command_utils.py  context_processors.py  enums.py  exceptions.py  feeds.py  managers.py  middleware.py  models.py  test_runner.py  urls.py  views.py
comics/core/fixtures/: test_comics.json  test_releases.json
comics/core/migrations/: 0001_initial.py  0002_add_release_comic_pub_date_index.py  0002_add_strip_imagefield.py  (+14 more)
comics/crawler/: base.py  exceptions.py  lxmlparser.py  meta.py  runner.py  supercrawler.py
comics/crawlers/: 8bittheater.py  __init__.py  asofterworld.py  basicinstructions.py  betty.py  bgobt.py  bizarro.py  brinkerhoff.py  butternutsquash.py  countyoursheep.py  cyanideandhappiness.py  darklegacy.py  deepfried.py  dieselsweetiesprint.py  dilbertbt.py  duelinganalogs.py  focusshift.py  garfield.py  getfuzzy.py  gpf.py  gucomics.py  gunshow.py  gws.py  harkavagrant.py  joyoftech.py  lagunen.py  littlegamers.py  lookingforgroup.py  megatokyo.py  nemi.py  nemibt.py  oots.py  pcweenies.py  peanuts.py  pearlsbeforeswine.py  pennyarcade.py  perrybiblefellowship.py  reallife.py  rocky.py  rockybt.py  (+15 more)
comics/feedback/: forms.py  urls.py  views.py
comics/help/: forms.py  urls.py  views.py
comics/meta/: base.py  command.py  exceptions.py  models.py
comics/search/: indexes.py  urls.py
comics/sets/: admin.py  context_processors.py  feeds.py  forms.py  middleware.py  models.py  urls.py  views.py
comics/settings/: __init__.py  base.py  coverage.py  dev.py  local.py.template  testing.py
comics/status/: urls.py  views.py
comics/utils/: commands.py  disk_import.py  hash.py  test_runner.py  virtualenv.py
comics/wsgi/: __init__.py  local.py.template
django-invitation/: AUTHORS
django-invitation/invitation/: admin.py  backends.py  models.py  urls.py  views.py
docs/: Makefile  README  authors.rst  bootstrapping.md  bootstrapping.rst  changes.rst  comics-model.dot  conf.py  crawler-meta-spec.txt  crawlers.md  crawlers.rst  data-model.md  data-model.rst  deployment.md  deployment.rst  development.rst  devenv.md  devenv.rst  haystack.rst  index.md  index.rst  installation.md  installation.rst  multi-release-upgrade.psql  requirements.txt  web-api.md  web-api.rst  webservice.rst
docs/_templates/: layout.html
docs/specs/: 001-multi-release.rst  002-crawler-meta.rst  003-multi-image.rst  004-public-active-schedule.rst  005-navigation-overhaul.rst  multi-image.rst  multi-release.rst
media/images/: favicon.psd
media/scripts/: navigation.js
media/style/: default.css
munin/: README
munin/plugin-conf.d/: comics
munin/plugins/: comics_comics  comics_days_since_release  comics_new_releases  comics_releases  comics_response_time  comics_sets  comics_strips
sources/: contributing.txt  installation.txt  todo.txt  usage.txt
sources/specs/: crawler-meta.txt
specs/: crawler-meta.html  multi-release.html
src/comics/: __init__.py  __main__.py  settings.py  urls.py  wsgi.py
static/: nature.css
tests/: conftest.py
tests/accounts/: test_login.py  test_secret_key.py
tests/aggregator/: conftest.py  test_aggregator.py  test_command.py  test_config.py  test_crawler.py
tests/api/: conftest.py  test_comics.py  test_docs.py  test_images.py  test_releases.py  test_root.py  test_subscriptions.py  test_users.py  test_wire_format.py
tests/browser/: test_feeds.py
wsgi/: deploy.wsgi  dev.wsgi  local.py.template  prod.wsgi
(+570 files in other folders)
