[project]
name = "comics"
dynamic = ["version"]
description = "Comics is a webcomics aggregator."
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["COPYING"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "defusedxml>=0.7.1",
    "dj-database-url>=3.0.1",
    "django-allauth>=65.18.0",
    "django-anymail>=13.0.1",
    "django-bootstrap-form>=3.4",
    "django-invitations>=2.1.0",
    "django-ninja>=1.6.2",
    "django-stubs-ext>=6.0.6",
    "django>=6.0.7,<7",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pillow>=12.3.0",
    "sentry-sdk>=2.64.0",
    "setuptools>=83.0.0",         # Needed by django-bootstrap-form
    "typenv>=0.2.0",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
cache = ["pymemcache>=4.0.0"]
pgsql = ["psycopg[pool]>=3.3.4"]
server = ["granian>=2.7.9"]

[project.scripts]
comics = "comics.__main__:main"

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "django-extensions>=4.1",
    "tox-uv>=1.35.2",
    "tox>=4.56.4",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "tests" },
    { include-group = "typing" },
    { include-group = "zizmor" },
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "zensical>=0.0.51",
]
lint = ["ruff>=0.15.21"]
tests = [
    "freezegun>=1.5.5",
    "pytest>=9.1.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]
typing = [
    "basedpyright>=1.39.9",
    "django-types",
    "types-lxml>=2025.3.30",
]
zizmor = ["zizmor==1.26.1"]


[tool.basedpyright]
pythonVersion = "3.13"
exclude = ["**/.*", "**/__pycache__", "src/comics/**/migrations"]
venvPath = "."
venv = ".venv"
stubPath = "src/stubs"
# We enable most type checks and then subsequently disable those we are not interested in
typeCheckingMode = "strict"
# We do not create stub files for all modules
reportMissingTypeStubs = false
# Warn when "type: ignore" and "pyright: ignore" is used unnecessarily
reportUnnecessaryTypeIgnoreComment = true
# Disallow classes that extend abstract classes without also explicitly declaring
# themselves as abstract or implementing all of the required abstract methods.
reportImplicitAbstractClass = true


[tool.coverage.run]
omit = [
    "src/comics/*/migrations/*",
    "src/comics/__main__.py",
    "src/comics/asgi.py",
    "src/comics/comics/*",
    "src/comics/wsgi.py",
]
source = ["comics"]


[tool.pytest.ini_options]
filterwarnings = [
    # --- Error by default ---
    # Convert all warnings into errors during testing, except for the given ignores
    "error",
    #
    # --- Deprecation warnings from third-party packages ---
    # bootstrapform uses deprecated `StrictVersion` from `distutils`
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
    #
    # django uses asyncio.iscoroutinefunction
    "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning",
]

# pytest-django
DJANGO_SETTINGS_MODULE = "comics.settings"


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",    # builtin-attribute-shadowing
    "ANN",     # flake8-annotations
    "ARG001",  # unused-function-argument  # TODO
    "ARG002",  # unused-method-argument  # TODO
    "D",       # flake8-pydocstyle
    "DTZ",     # flake8-datetimez  # TODO
    "EM101",   # raw-string-in-exception
    "FBT",     # flake8-boolean-trap  # TODO
    "FIX001",  # line-contains-fixme
    "FIX002",  # line-contains-todo
    "FIX003",  # line-contains-xxx
    "N818",    # error-suffix-on-exception-name  # TODO
    "PERF401", # manual-list-comprehension  # TODO
    "PLR0913", # too-many-arguments  # TODO
    "PLR2004", # magic-value-comparison
    "PLR2044", # empty-comment
    "PT",      # flake8-pytest-style  # TODO
    "PTH",     # flake8-use-pathlib  # TODO
    "RET",     # flake8-return  # TODO
    "RET504",  # unnecessary-assign
    "RUF012",  # mutable-class-default  # TODO
    "S101",    # assert
    "SIM115",  # open-file-with-context-handler  # TODO
    "SLF",     # flake8-self  # TODO
    "TD",      # flake8-todos
    "TRY",     # tryceratops  # TODO
    "TRY003",  # raise-vanilla-args
    #
    # These rules interfere with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
known-first-party = ["comics"]


[tool.tox]
env_list = [
    "3.13",
    "3.14",
    "basedpyright",
    "docs",
    "ruff-format",
    "ruff-check",
    "zizmor",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = ["tests"]
set_env = { DJANGO_SECRET_KEY = "test-only-s3cret" }
commands = [
    [
        "pytest",
        "--basetemp={envtmpdir}",
        "--cov",
        "--cov-report=term-missing",
        "{posargs}",
    ],
]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [["zensical", "build", "--clean"]]

[tool.tox.env.basedpyright]
runner = "uv-venv-lock-runner"
dependency_groups = ["typing"]
commands = [["basedpyright", "{posargs:src}"]]

[tool.tox.env."ruff-format"]
runner = "uv-venv-lock-runner"
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check", "{posargs:.}"]]

[tool.tox.env."ruff-check"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check", "{posargs:.}"]]

[tool.tox.env.zizmor]
skip_install = true
dependency_groups = ["zizmor"]
commands = [["zizmor", "{posargs:.}"]]


[tool.uv]
package = true
# Overriding cache-keys drops uv's default pyproject.toml key, so keep it
# explicitly, plus the git key uv-dynamic-versioning needs to re-derive the
# version when the commit or tags change
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.uv.sources]
# PyPI releases of django-types lag behind; track a known-good commit
django-types = { git = "https://github.com/sbdchd/django-types", rev = "36159bf3fce424086101c7b28dda204bf3f600f7" }


[tool.hatch.build.targets.sdist]
include = [
    ".github/**",
    ".gitignore",
    ".mailmap",
    "dev-template.env",
    "docs/**",
    "src/**",
    "tests/**",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"


[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
